--- a/css/estilobase.css
+++ b/css/estilobase.css
@@ -1,1 +1,122 @@
 /*Estilos basicos de la pagina*/
+/* Estilos generales */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+}
+
+header {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 20px 0;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+nav li {
+    display: inline;
+    margin-right: 20px;
+}
+
+nav a {
+    text-decoration: none;
+    color: #333;
+    font-weight: bold;
+}
+
+section {
+    margin: 20px;
+}
+
+
+
+/* Estilos para la sección de películas en cartelera */
+.peliculacar {
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    padding: 10px;
+}
+
+
+/* Estilos para el pie de página */
+footer {
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+}
+
+/* Diseño Responsivo */
+@media (max-width: 768px) {
+    /* Estilos para tablets y smartphones */
+    header {
+        padding: 10px 0;
+    }
+
+    nav ul {
+        text-align: center;
+    }
+
+    nav li {
+        display: block;
+        margin: 10px 0;
+    }
+
+   
+    /* Estilos para las películas en dispositivos pequeños */
+    .pelicula {
+        padding: 10px;
+    }
+
+    iframe {
+        height: auto;
+    }
+}
+
+/* Estilos para la sección de cartelera */
+.pelicula {
+    display: inline-block;
+    margin-right: 20px;
+    text-align: center;
+    vertical-align: top;
+    width: 300px; /* Ajusta el ancho según sea necesario */
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    padding: 20px;
+}
+
+.pelicula img {
+    max-width: 100%;
+    height: auto;
+}
+
+.pelicula h3 {
+    margin-top: 0;
+}
+
+iframe {
+    width: 100%;
+    height: 315px;
+}
+
+/* Estilos para la sección de proximos-estrenos */
+.proximo-estrenos{
+    display: inline-block;
+    margin-right: 10px;
+    text-align: center;
+    vertical-align: top;
+    width: 250px; /* Ajusta el ancho según sea necesario */
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    padding: 10px;
+}
+
+.proximo-estrenos img {
+    max-width: 100%;
+    height: auto;
+}
