--- a/css/estilobase.css
+++ b/css/estilobase.css
@@ -86,10 +86,10 @@ nav ul li a#dulceria1 {
     padding-left: 40px;
 }
 
-nav ul li a#inicio1 {
+/* nav ul li a#inicio1 {
     background: url(../img/icons/inicio.png) no-repeat 0px 3px;
     padding-left: 40px;
-}
+} */
 
 section {
     margin: 20px;
