update estilo tablet
estilotablet.css done!

--- a/css/estilotablet.css
+++ b/css/estilotablet.css
@@ -91,23 +91,9 @@ section {
     margin: 20px;
 }
 
+/*Estilos para la seccion cartelera*/
 #cartelera {
     background-color: lavender;
-}
-
-#cartelera .pelicula {
-    width: 40%;
-    border-radius: 15px;
-}
-
-
-#proximo-estrenos .proximo-estrenos {
-    width: 44%;
-    border-radius: 15px;
-}
-
-#proximo-estrenos .proximo-estrenos  img {
-    width: 317px;
 }
 
 #cartelera h2{
@@ -116,59 +102,17 @@ section {
     color: navy;
 }
 
-#pelicula_en_cartelera  h2{
-    font-family: 'Acme', sans-serif;
-    font-size: 30px;
-    color: navy;
+.contenedor-peliculas{
+    display: flex;
+    flex-wrap: wrap;
 }
 
-#proximo-estrenos h2{
-    font-family: 'Acme', sans-serif;
-    font-size: 30px;
-    color: navy;
-}
-
-#promociones h2{
-    font-family: 'Acme', sans-serif;
-    font-size: 30px;
-    color: navy;
-}
-
-#dulceria h2{
-    font-family: 'Acme', sans-serif;
-    font-size: 30px;
-    color: navy;
-}
-
-/* Estilos para la sección de películas en cartelera */
-.peliculacar {
-    margin-bottom: 20px;
-    border: 1px solid #ddd;
-    padding: 10px;
-    background-color: white;
+#cartelera .pelicula {
+    width: 40%;
     border-radius: 15px;
-}
-
-#generos button {
-    margin-top: 10px;
-    border: none;
     box-sizing: border-box;
-    background-color: #091dab;
-    color: #ffffff;
-    font-size: 14px;
-    border-radius: 15px;
-    height: 25px;
 }
 
-/* Estilos para el pie de página */
-footer {
-    background-color: navy;
-    color: white;
-    text-align: center;
-    padding: 10px 0;
-}
-
-/* Estilos para la sección de cartelera */
 .pelicula {
     display: inline-block;
     margin-right: 20px;
@@ -195,7 +139,33 @@ iframe {
     height: 315px;
 }
 
-/* Estilos para la sección de proximos-estrenos */
+/*Estilos para la seccion pelicula en cartelera*/
+#pelicula_en_cartelera  h2{
+    font-family: 'Acme', sans-serif;
+    font-size: 30px;
+    color: navy;
+}
+
+.peliculacar {
+    margin-bottom: 20px;
+    border: 1px solid #ddd;
+    padding: 10px;
+    background-color: white;
+    border-radius: 15px;
+}
+
+#generos button {
+    margin-top: 10px;
+    border: none;
+    box-sizing: border-box;
+    background-color: #091dab;
+    color: #ffffff;
+    font-size: 14px;
+    border-radius: 15px;
+    height: 25px;
+}
+
+/*Estilos para la seccion estrenos*/
 .proximo-estrenos{
     display: inline-block;
     margin-right: 10px;
@@ -217,16 +187,74 @@ iframe {
 }
 .proximo-estrenos img {
     max-width: 100%;
-    height: 390px;
+    height: auto;
+}
+#proximo-estrenos h2{
+    font-family: 'Acme', sans-serif;
+    font-size: 30px;
+    color: navy;
+}
+
+.contenedor-estrenos {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#proximo-estrenos .proximo-estrenos {
+    width: 40%;
+    border-radius: 15px;
+    height: 10%;
+}
+
+#proximo-estrenos .proximo-estrenos  img {
+    width: 317px;
+}
+
+
+/* Estilos para la sección de dulceria y promociones */
+#bottom-info{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#promociones h2{
+    font-family: 'Acme', sans-serif;
+    font-size: 30px;
+    color: navy;
+}
+
+#dulceria h2{
+    font-family: 'Acme', sans-serif;
+    font-size: 30px;
+    color: navy;
 }
 
 #dulceria {
     width: 90%;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 
 #promociones {
     width: 90%;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
+
+/* Estilos para el pie de página */
+footer {
+    background-color: navy;
+    color: white;
+    text-align: center;
+    padding: 10px 0;
+}
+
