--- a/css/estilomovil.css
+++ b/css/estilomovil.css
@@ -169,6 +169,8 @@ iframe {
     padding: 10px;
     background-color: white;
     border-radius: 15px;
+    height: auto;
+    box-sizing: border-box;
 }
 
 #generos button {
