--- a/css/estilobase.css
+++ b/css/estilobase.css
@@ -88,6 +88,11 @@ nav ul li a#promociones1 {
     padding-left: 40px;
 }
 
+nav ul li a#usuarios1 {
+    background: url(../img/icons/user.png) no-repeat 0px 3px;
+    padding-left: 40px;
+}
+
 
 section {
     margin: 20px;
