--- a/css/estilobase.css
+++ b/css/estilobase.css
@@ -50,7 +50,7 @@ nav ul li .nav-link:hover {
     transform: scale(1.1);
 }
 
-#cartelera h2, #pelicula_en_cartelera h2, .slide-container h2 {
+#cartelera h2, #pelicula_en_cartelera h2, .slide-container h2, .text_align_center h2 {
     font-family: 'Acme', sans-serif;
     font-size: 30px;
     color: navy;
@@ -111,139 +111,90 @@ nav ul li .nav-link:hover {
 
 }
 
-
-/*Codigo de prueba*/
-/* Google Fonts - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-
-.slide-container{
-  max-width: 1120px;
-  width: 100%;
-  padding: 40px 0;
-}
-.slide-content{
-  margin: 0 40px;
-  overflow: hidden;
-  border-radius: 25px;
-}
-.card{
-  border-radius: 25px;
-  background-color: #FFF;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
-}
-.image-content,
-.card-content{
+.swiper-container .cart {
+  position: relative;
+  background: #fff;
+  border-radius: 20px;
+  padding: 20px 60px;
+  box-shadow: 0 0 10px #b9ffff;
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   align-items: center;
-  padding: 10px 14px;
 }
-.image-content{
-  position: relative;
-  row-gap: 5px;
-  padding: 25px 0;
-}
-.overlay{
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background-color: #4070F4;
-  border-radius: 25px 25px 0 25px;
-}
-.overlay::before,
-.overlay::after{
-  content: '';
-  position: absolute;
-  right: 0;
-  bottom: -40px;
-  height: 40px;
-  width: 40px;
-  background-color: #4070F4;
-}
-.overlay::after{
-  border-radius: 0 25px 0 0;
-  background-color: #FFF;
-}
-.card-image{
-  position: relative;
-  height: 150px;
+.swiper-container .cart .image {
   width: 150px;
-  border-radius: 50%;
-  background: #FFF;
+  height: 150px;
   padding: 3px;
+  border: 3px solid #2064b4;
+  background: #fff;
+  border-radius: 50%;
+  margin-bottom: 20px;
 }
-.card-image .card-img{
-  height: 100%;
+.swiper-container .cart .image img {
   width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 50%;
-  border: 4px solid #4070F4;
 }
-.name{
-  font-size: 18px;
-  font-weight: 500;
-  color: #333;
-}
-.description{
-  font-size: 14px;
-  color: #707070;
+.cart h3 {
+  color: #7c00ba;
+  font-weight: bold;
   text-align: center;
 }
-.button{
-  border: none;
+
+.cart h6 {
+  color: #ac6ace;
+}
+.cart p {
+  text-align: justify;
+}
+.swiper-container {
+  position: relative;
+  margin: 0 auto;
+  width: 100%;
+  height: 50vh;
+}
+.swiper {
+  margin: 0 auto;
+  cursor: grab;
+}
+.swiper-container .swiper-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.swiper-container .swiper-button-next,
+.swiper-container .swiper-button-prev {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background: #fff;
+  box-shadow: 0 0 10px #ccc;
+}
+.swiper-container .swiper-button-next::after,
+.swiper-container .swiper-button-prev::after {
   font-size: 16px;
-  color: #FFF;
-  padding: 8px 16px;
-  background-color: #4070F4;
-  border-radius: 6px;
-  margin: 14px;
-  cursor: pointer;
-  transition: all 0.3s ease;
+  font-weight: bold;
+  color: #000;
 }
-.button:hover{
-  background: #265DF2;
+.swiper-container .swiper-button-next:hover {
+  transform: scale(1.2) translateX(80%);
 }
-
-.swiper-navBtn{
-  color: #6E93f7;
-  transition: color 0.3s ease;
+.swiper-container .swiper-button-prev:hover {
+  transform: scale(1.2) translateX(-80%);
 }
-.swiper-navBtn:hover{
-  color: #4070F4;
+.swiper-container .swiper-button-next {
+  transform: translateX(100%);
 }
-.swiper-navBtn::before,
-.swiper-navBtn::after{
-  font-size: 35px;
+.swiper-container .swiper-button-prev {
+  transform: translateX(-100%);
 }
-.swiper-button-next{
-  right: 0;
+.swiper-container .swiper-pagination {
+  transform: translateY(200%);
 }
-.swiper-button-prev{
-  left: 0;
+.swiper-container .swiper-pagination-bullet {
+  background: #7c00ba;
+  width: 15px;
+  height: 15px;
 }
-.swiper-pagination-bullet{
-  background-color: #6E93f7;
-  opacity: 1;
-}
-.swiper-pagination-bullet-active{
-  background-color: #4070F4;
-}
-
-@media screen and (max-width: 768px) {
-  .slide-content{
-    margin: 0 10px;
-  }
-  .swiper-navBtn{
-    display: none;
-  }
-}
-
