--- a/css/estilobase.css
+++ b/css/estilobase.css
@@ -236,3 +236,20 @@ footer {
       display: none;
   }
 }
+
+main {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  padding: 20px 0;
+}
+
+section {
+  min-width: 300px;
+  max-width: 400px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  background-color: #fff; /* Fondo blanco para los sections */
+}
